rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_q_q952.7_1997_Explicit-Call-Transfer-Operations-and-Errors.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_q_q952.7_1997_Explicit-Call-Transfer-Operations-and-Errors.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod explicit_call_transfer_operations_and_errors {
    extern crate alloc;
    use super::addressing_data_elements::{PartySubaddress, PresentedNumberUnscreened};
    use super::general_error_list::{
        INVALID_CALL_STATE, NOT_AVAILABLE, RESOURCE_UNAVAILABLE,
        SUPPLEMENTARY_SERVICE_INTERACTION_NOT_ALLOWED, USER_NOT_SUBSCRIBED,
    };
    use super::remote_operations_information_objects::*;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate, value("-128..=127"))]
    pub struct CallTransferIdentity(pub i8);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate, value("-32773..=32772"))]
    pub struct LinkId(pub i32);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash, Copy)]
    #[rasn(enumerated)]
    pub enum LoopResult {
        insufficientInformation = 0,
        noLoopExists = 1,
        simultaneousTransfer = 2,
    }
}
