rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_q_q953.3_1997_CCBS-private-networks-operations-and-errors.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_q_q953.3_1997_CCBS-private-networks-operations-and-errors.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod ccbs_private_networks_operations_and_errors {
    extern crate alloc;
    use super::addressing_data_elements::Address;
    use super::embedded_q931_types::Q931InformationElement;
    use super::general_error_list::USER_NOT_SUBSCRIBED;
    use super::remote_operations_information_objects::*;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash, Copy)]
    #[rasn(delegate)]
    pub struct RetentionSupported(pub bool);
}
