rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_q_q954.1_1993_Conference-Add-On-Operations.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_q_q954.1_1993_Conference-Add-On-Operations.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod conference_add_on_operations {
    extern crate alloc;
    use super::general_error_list::{
        INVALID_CALL_STATE, NOT_AVAILABLE, RESOURCE_UNAVAILABLE,
        SUPPLEMENTARY_SERVICE_INTERACTION_NOT_ALLOWED, USER_NOT_SUBSCRIBED,
    };
    use super::remote_operations_information_objects::*;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate, value("0..=127"))]
    pub struct ConfSize(pub u8);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate, value("0..=127"))]
    pub struct ConferenceId(pub u8);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate, value("0..=127"))]
    pub struct PartyId(pub u8);
}
