rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_q_q954.1_1993_Conference-Add-on-Notifications.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_q_q954.1_1993_Conference-Add-on-Notifications.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod conference_add_on_notifications {
    extern crate alloc;
    use super::conference_add_on_operations::PartyId;
    use super::notification_indicator_ie_data_structure::*;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
}
