rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_q_q954.2_1995_Three-Party-Operations.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_q_q954.2_1995_Three-Party-Operations.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod three_party_operations {
    extern crate alloc;
    use super::general_error_list::{
        INVALID_CALL_STATE, NOT_AVAILABLE, RESOURCE_UNAVAILABLE,
        SUPPLEMENTARY_SERVICE_INTERACTION_NOT_ALLOWED, USER_NOT_SUBSCRIBED,
    };
    use super::remote_operations_information_objects::*;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
}
