rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_q_q956.3_1995_Reverse-Charging-Service-Operations-and-Errors.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_q_q956.3_1995_Reverse-Charging-Service-Operations-and-Errors.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod reverse_charging_service_operations_and_errors {
    extern crate alloc;
    use super::general_error_list::{
        BASIC_SERVICE_NOT_PROVIDED, INVALID_CALL_STATE, NOT_AVAILABLE, PROCEDURAL_ERROR,
        REJECTED_BY_NETWORK, REJECTED_BY_USER, RESOURCE_UNAVAILABLE,
        SUPPLEMENTARY_SERVICE_INTERACTION_NOT_ALLOWED, USER_NOT_SUBSCRIBED,
    };
    use super::remote_operations_information_objects::*;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash, Copy)]
    #[rasn(enumerated)]
    pub enum Case {
        caseA = 1,
        caseB = 2,
        caseC = 3,
    }
}
