rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_q_q956.3_1995_Reverse-Charging-Service-Private-Networks-Operation.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_q_q956.3_1995_Reverse-Charging-Service-Private-Networks-Operation.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod reverse_charging_service_private_networks_operation {
    extern crate alloc;
    use super::remote_operations_information_objects::*;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash, Copy)]
    #[rasn(enumerated)]
    pub enum Status {
        wholeCall = 1,
        forTheRestOfTheCall = 2,
    }
}
