rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_q_q957.1_1996_User-to-user-Signalling.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_q_q957.1_1996_User-to-user-Signalling.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod user_to_user_signalling {
    extern crate alloc;
    use super::general_error_list::{REJECTED_BY_NETWORK, REJECTED_BY_USER};
    use super::remote_operations_information_objects::*;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash, Copy)]
    #[rasn(delegate)]
    pub struct Preferred(pub bool);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate, value("1..=3"))]
    pub struct Service(pub u8);
    pub const PREFERRED: Preferred = Preferred(true);
    pub const REQUIRED: Preferred = Preferred(false);
}
