rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_t_t101_1994_Videotex-Coding-Attributes.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_t_t101_1994_Videotex-Coding-Attributes.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod videotex_coding_attributes {
    extern crate alloc;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate)]
    pub struct Profile(pub Integer);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate)]
    pub struct Rank(pub Integer);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate)]
    pub struct Subset(pub Integer);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(set, identifier = "Videotex-Coding-Attributes")]
    pub struct VideotexCodingAttributes {
        #[rasn(tag(context, 0))]
        pub subset: Option<Subset>,
        #[rasn(tag(context, 1))]
        pub rank: Option<Rank>,
        #[rasn(tag(context, 2))]
        pub profile: Option<Profile>,
    }
    impl VideotexCodingAttributes {
        pub fn new(subset: Option<Subset>, rank: Option<Rank>, profile: Option<Profile>) -> Self {
            Self {
                subset,
                rank,
                profile,
            }
        }
    }
}
